tests/error/linear_errors/if_both_unused_field.py
import guppylang.std.quantum as quantum
from guppylang.decorator import guppy
from guppylang.module import GuppyModule
from guppylang.std.quantum import qubit


module = GuppyModule("test")
module.load_all(quantum)


@guppy.struct(module)
class MyStruct:
    q: qubit


@guppy(module)
def foo(b: bool) -> int:
    if b:
        s = MyStruct(qubit())
    else:
        s = MyStruct(qubit())
    return 42


module.compile()
