tests/error/linear_errors/if_both_unused_field.err
Error: Drop violation (at $FILE:19:8)
   | 
17 | def foo(b: bool) -> int:
18 |     if b:
19 |         s = MyStruct(qubit())
   |         ^ Field `s.q` with non-droppable type `qubit` is leaked

Help: Make sure that `s.q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
